Fix linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/nishanthvijayan"
+  linkedin         : "nishanthvijayan"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
