--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ google_ad_slot           :
 author:
   name             : "Nishanth Vijayan"
   avatar           : "bio-photo.jpg"
-  bio              : "Final year,Junior Undergraduate student @ IIT Ropar,India"
+  bio              : "Geek.Humanist.CSE Student @ IIT Ropar,India"
   location         : "Rupnagar, Punjab, India"
   email            : "nishanth.vijayan@iitrpr.ac.in"
   uri              :
